# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
gendiff/: __init__.py  cli.py  diff_generator.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  choice_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file_2.yml  result_json.txt
